first edit. input errors are left to complete

--- a/create-account/src/components/componentsStyle/NewAccount.css
+++ b/create-account/src/components/componentsStyle/NewAccount.css
@@ -9,7 +9,7 @@
   flex-col
   rounded-2xl
   shadow-2xl
-  bg-[url("https://s6.uupload.ir/files/picture_7m6y.jpg")]
+  bg-[url("/src/pictures/picture.jpg")]
   bg-center
   bg-no-repeat
   bg-cover
